--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -139,6 +139,7 @@
 
     section.situation_centre .situation_centre_grid-wrapper .brain_heart-2 .brain_heart-title,
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_history .water_patrol_history_top .water_patrol_history-title,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-subtitle,
     section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
         font-size: 2.8rem;
         line-height: 30px;
@@ -153,9 +154,25 @@
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_1 .water_patrol-text,
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_2 .water_patrol-text,
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_mobile .water_patrol-text,
-    section.water_patrol .water_patrol_grid-wrapper .water_patrol_history .water_patrol_history-text {
+    section.water_patrol .water_patrol_grid-wrapper .water_patrol_history .water_patrol_history-text,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr .velo_patrol_about-text,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_1 p,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_2 p,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_mobile p {
         font-size: 2.4rem;
         line-height: 26px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-subtitle {
+        margin-bottom: 70px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr .velo_patrol_about-text:first-child {
+        max-width: 500px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr .velo_patrol_about-text:last-child {
+        max-width: 500px;
     }
 
     section.help_desk .help_desk_grid-wrapper .equipment-4 .text {
@@ -196,6 +213,10 @@
 @media (max-width: 1500px) {
     section.traffic_patrol .traffic_patrol-wrapper img {
         width: 500px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-subtitle {
+        margin-bottom: 40px;
     }
 }
 
@@ -558,6 +579,41 @@
     }
 
 
+
+
+    section.velo_patrol .velo_patrol_grid-wrapper {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, min-content);
+        grid-auto-columns: 1fr;
+        gap: 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+    "velo_patrol_title velo_patrol_about velo_patrol_about velo_patrol_about"
+    "velo_patrol_text_mobile velo_patrol_text_mobile velo_patrol_card velo_patrol_card"
+    "velo_patrol_text_mobile velo_patrol_text_mobile velo_patrol_card velo_patrol_card";
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about {
+        padding: 20px 30px 20px 20px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_1,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_2 {
+        display: none;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_mobile {
+        display: block;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_mobile p:first-child {
+        margin-bottom: 20px;
+    }
+
+
+
+
     section.help_desk .help_desk_grid-wrapper {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -797,29 +853,29 @@
         left: -50%;
     }
 
-    section.traffic_patrol .traffic_patrol-text {
-        font-size: 1.4rem;
-        line-height: 20px;
-    }
+    /*section.traffic_patrol .traffic_patrol-text {*/
+    /*    font-size: 1.4rem;*/
+    /*    line-height: 20px;*/
+    /*}*/
 
     /*section.help_desk .help_desk_grid-wrapper {*/
     /*    grid-template-columns: 140px repeat(3, 1fr);*/
     /*}*/
 
-    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text,
-    section.help_desk .help_desk_grid-wrapper .equipment-4 .text,
-    section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text
-    /*section.help_desk .help_desk_grid-wrapper .сrew .сrew_text */
-    {
-        font-size: 1.4rem;
-    }
+    /*section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text,*/
+    /*section.help_desk .help_desk_grid-wrapper .equipment-4 .text,*/
+    /*section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text*/
+    /*!*section.help_desk .help_desk_grid-wrapper .сrew .сrew_text *!*/
+    /*{*/
+    /*    font-size: 1.4rem;*/
+    /*}*/
 }
 
 @media (max-width: 820px) {
-    section.traffic_patrol .traffic_patrol-text {
-        font-size: 1.4rem;
-        line-height: 21px;
-    }
+    /*section.traffic_patrol .traffic_patrol-text {*/
+    /*    font-size: 1.4rem;*/
+    /*    line-height: 21px;*/
+    /*}*/
 
     section.help_desk .help_desk_grid-wrapper .parkon-2 {
         padding: 20px;
@@ -829,20 +885,20 @@
         margin-bottom: 20px;
     }
 
-    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text {
-        font-size: 1.4rem;
-    }
+    /*section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text {*/
+    /*    font-size: 1.4rem;*/
+    /*}*/
 
-    section.help_desk .help_desk_grid-wrapper .equipment-4 .text {
-        font-size: 1.3rem;
-    }
+    /*section.help_desk .help_desk_grid-wrapper .equipment-4 .text {*/
+    /*    font-size: 1.3rem;*/
+    /*}*/
 
-    section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text
-    /*section.help_desk .help_desk_grid-wrapper .сrew .сrew_text */
-    {
-        font-size: 1.4rem;
-        line-height: 20px;
-    }
+    /*section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text*/
+    /*!*section.help_desk .help_desk_grid-wrapper .сrew .сrew_text *!*/
+    /*{*/
+    /*    font-size: 1.4rem;*/
+    /*    line-height: 20px;*/
+    /*}*/
 
     /*section.help_desk .help_desk_grid-wrapper {*/
     /*    display: grid;*/
@@ -872,10 +928,10 @@
         max-width: 142px;
     }
 
-    .title, section.traffic_patrol .traffic_patrol-title {
-        font-size: 2.1rem;
-        line-height: 22px;
-    }
+    /*.title, section.traffic_patrol .traffic_patrol-title {*/
+    /*    font-size: 2.1rem;*/
+    /*    line-height: 22px;*/
+    /*}*/
 
     /*section.main .main_grid-wrapper {*/
     /*    grid-template-columns: repeat(3, 1fr);*/
@@ -1121,6 +1177,53 @@
     }
 
     section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_mobile .water_patrol-text:first-child {
+        margin-bottom: 10px;
+    }
+
+
+
+    section.velo_patrol .velo_patrol_grid-wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, min-content);
+        grid-auto-columns: 1fr;
+        gap: 40px 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+    "velo_patrol_title ."
+    "velo_patrol_card velo_patrol_about"
+    "velo_patrol_text_1 velo_patrol_text_2";
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_1,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_2 {
+        display: block;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_mobile {
+        display: none;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about {
+        padding: 20px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-subtitle {
+        font-size: 1.8rem;
+        line-height: 24px;
+        margin-bottom: 30px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr {
+        flex-direction: column;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr .velo_patrol_about-text:first-child,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr .velo_patrol_about-text:last-child {
+        max-width: unset;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr .velo_patrol_about-text:first-child {
         margin-bottom: 10px;
     }
 
@@ -1908,8 +2011,61 @@
     section.water_patrol .container_main .water_patrol_grid-wrapper .water_patrol_history .water_patrol_history_top .water_patrol_history-title {
         margin-right: 0;
         margin-bottom: 20px;
+        font-size: 1.6rem;
+        line-height: 21px;
     }
 
+    section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_1 .water_patrol-text,
+    section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_2 .water_patrol-text,
+    section.water_patrol .water_patrol_grid-wrapper .water_patrol_text_mobile .water_patrol-text,
+    section.water_patrol .water_patrol_grid-wrapper .water_patrol_history .water_patrol_history-text {
+        font-size: 1.4rem;
+        line-height: 21px;
+    }
+
+
+
+    section.velo_patrol .velo_patrol_grid-wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, min-content);
+        grid-auto-columns: 1fr;
+        gap: 40px;
+        grid-auto-flow: row;
+        grid-template-areas:
+    "velo_patrol_title"
+    "velo_patrol_about"
+    "velo_patrol_text_mobile"
+    "velo_patrol_card";
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_1,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_2 {
+        display: none;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_mobile {
+        display: block;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_mobile p,
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-descr .velo_patrol_about-text {
+        font-family: 'MoscowSans', sans-serif;
+        color: #FFF;
+        font-size: 1.4rem;
+        font-weight: 400;
+        line-height: 21px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_text_mobile p:first-child {
+        margin-bottom: 10px;
+    }
+
+    section.velo_patrol .velo_patrol_grid-wrapper .velo_patrol_about .velo_patrol_about-subtitle {
+        font-size: 1.6rem;
+        line-height: 21px;
+        margin-bottom: 20px;
+    }
 
 
     section.help_desk .help_desk_grid-wrapper .driver-3,
@@ -1939,7 +2095,7 @@
 
     section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
         font-size: 1.6rem;
-        line-height: 24px;
+        line-height: 21px;
         margin-bottom: 20px;
         /*max-width: 273px;*/
         max-width: unset;
@@ -1947,7 +2103,7 @@
 
     section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text {
         font-size: 1.4rem;
-        line-height: 24px;
+        line-height: 21px;
     }
 
     /*section.situation_centre .situation_centre_grid-wrapper .slider-5 {*/
